asean-dev-challenge-21/force-app/main/default/objects/Event_Attendee__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>