asean-dev-challenge-21/force-app/main/default/objects/Event_Attendee__c/listViews/Cancelled_Event_Attendees.listView-meta.xml
<ListView>
    <fullName>Cancelled_Event_Attendees</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Event Attendees</label>
</ListView>